Closed Bug 1434803 Opened 8 years ago Closed 8 years ago

PeerConnectionImpl errors get swallowed in the binding layer in a bunch of cases

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Patch coming up with an explanation in the commit message.
PeerConnectionImpl defines two versions of various fallible methods: a version taking an ErrorResult argument, and a version returning nsresult. The methods were not marked fallible in the webidl, so the bindings called the nsresult-returning version, but ignored the returned value. As a result, failures got swallowed instead of being propagated out. The changes here annotate the relevant parts of the webidl as throwing, and convert non-fallible methods to returning void to make infallibility clearer. MozReview-Commit-ID: JU9NzmEf8FV
Attachment #8947340 - Flags: review?(jib)
Blocks: 1132934
Comment on attachment 8947340 [details] [diff] [review] Properly propagate out errors from various PeerConnectionImpl methods Review of attachment 8947340 [details] [diff] [review]: ----------------------------------------------------------------- LGTM
Attachment #8947340 - Flags: review?(jib) → review+
Rank: 15
Priority: -- → P2
Pushed by bzbarsky@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/fb0b7a29a7ec Properly propagate out errors from various PeerConnectionImpl methods. r=drno
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: