Bug 1434803.  Properly propagate out errors from various PeerConnectionImpl methods.  r=drno

PeerConnectionImpl defines two versions of various fallible methods: a version
taking an ErrorResult argument, and a version returning nsresult.  The methods
were not marked fallible in the webidl, so the bindings called the
nsresult-returning version, but ignored the returned value.  As a result,
failures got swallowed instead of being propagated out.

The changes here annotate the relevant parts of the webidl as throwing, and
convert non-fallible methods to returning void to make infallibility clearer.

MozReview-Commit-ID: JU9NzmEf8FV